kubernetes/06_Deployments/gradiva/2048/ingress-2048.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
spec:
  rules:
  - host: simple-server.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-2048
            port: 
              number: 80
